# helpdesk

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  __init__.py  app.py  config_app.py  exec_all_tests.sh  extensions.py  index.html  init_db.py  mkdocs.yml  pyproject.toml  requirements.txt  start_app.sh  visao_html.py
crontab/: schedulers.py
db/: __init__.py  config_table.py  sector_table.py  ticket_anexos_table.py  ticket_assunto_table.py  ticket_copia_table.py  ticket_interacao_table.py  ticket_status_de_para_table.py  ticket_status_table.py  ticket_table.py  user_table.py
decorators/: is_agent.py
dockerfiles/deploy/: Dockerfile  requirements.txt
dockerfiles/desenv/: Dockerfile  requirements.txt
docs/: index.md
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/sh/: pos_build.sh
frontend/src/: App.js  index.js
instance/: helpdesk.db
models/: __init__.py  sector.py  user.py  user_table.py
models/config/: __init__.py  config.py  config_data.py  config_db.py
models/sector/: __init__.py  sector.py  sector_db.py
models/sender/: sender.py
models/user/: __init__.py  user.py  user_auth.py  user_db.py
routes/: __init__.py
routes/config_helpdesk/: config_helpdesk_api.py
routes/helpdesk/: helpdesk_api.py  helpdesk_assuntos_api.py  helpdesk_auxiliar.py  helpdesk_gestao_api.py  helpdesk_gestao_auxiliar.py  helpdesk_query.py  helpdesk_status_api.py  (+1 more)
schemas/: custom_schema.py  success_schema.py
site/: 404.html  objects.inv
templates/: template_react.html
utils/: dates.py  files.py  sender.py
(+129 files in other folders)
